Update phan trang

--- a/ShoesAdmin/src/app/components/table-khachhang/table-khachhang.component.html
+++ b/ShoesAdmin/src/app/components/table-khachhang/table-khachhang.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper">
   <!-- Add rows table -->
-  <section id="add-row">
+  <section id="extended">
     <div class="row">
       <div class="col-12">
         <div class="card">
@@ -11,7 +11,7 @@
             <div class="card-block">
               <!-- <button id="addRow" class="btn btn-primary mb-2">
                 <i class="ft-plus"></i>&nbsp; Thêm mới</button> -->
-              <table id="table_kh" class="table table-striped table-bordered add-rows">
+              <table id="table_kh" class="table table-responsive-md-md text-center">
                 <thead>
                   <tr>
                     <th>Mã Khách Hàng</th>
@@ -24,7 +24,7 @@
                 </thead>
                 <tbody>
                   <tr *ngFor="let kh of list_kh">
-                    <td>{{kh.id}}</td>
+                    <td style="vertical-align: middle">{{kh.id}}</td>
                     <td>{{kh.tenKhachHang}}</td>
                     <td>{{kh.soDienThoai}}</td>
                     <td>{{kh.diaChi}}</td>
