--- a/ShoesAdmin/src/app/components/table-nhanvien/table-nhanvien.component.html
+++ b/ShoesAdmin/src/app/components/table-nhanvien/table-nhanvien.component.html
@@ -11,7 +11,7 @@
             <div class="card-block">
               <button id="addRow" class="btn btn-primary mb-2">
                 <i class="ft-plus"></i>&nbsp; Thêm mới</button>
-              <table id="table_nv" class="table table-striped table-bordered add-rows">
+              <table id="table_nv" class="table table-responsive-md-md text-center">
                 <thead>
                   <tr>
                     <th>Mã Nhân Viên</th>
