--- a/ShoesAdmin/src/app/components/index/index.component.html
+++ b/ShoesAdmin/src/app/components/index/index.component.html
@@ -1,3 +1,4 @@
+<script src="../assets/app-assets/vendors/js/chartist.min.js" type="text/javascript"></script>
 <div class="wrapper">
     <!-- main menu-->
     <!--.main-menu(class="#{menuColor} #{menuOpenType}", class=(menuShadow == true ? 'menu-shadow' : ''))-->
