--- a/karl-shop/src/app/components/user-login/user-profile/user-profile.component.html
+++ b/karl-shop/src/app/components/user-login/user-profile/user-profile.component.html
@@ -12,7 +12,7 @@
 
       <div class="hotline">
         <label class="lblName">Số điện thoại</label>
-        <mat-form-field>
+        <mat-form-field floatPlaceholder="never">
           <input matInput placeholder="098 9874 123">
         </mat-form-field>
       </div>
