--- a/karl-shop/src/app/components/side-bar/side-bar.component.html
+++ b/karl-shop/src/app/components/side-bar/side-bar.component.html
@@ -10,24 +10,17 @@
               <div class="nav-side-menu">
                 <h6 class="mb-0">Danh mục</h6>
                 <div class="menu-list">
+                  
                   <ul id="menu-content2" class="menu-content collapse out">
-                    <li data-toggle="collapse" data-target="#women2">
-                      <a>Giày Nữ</a>
-                      <ul class="sub-menu collapse show" id="women2">
-                        <li *ngFor="let name of _tenGiay">
-                          <a (click)="goCate(name)">{{name}}</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li data-toggle="collapse" data-target="#man2" class="collapsed">
-                      <a>Giày Nam</a>
-                      <ul class="sub-menu collapse show" id="man2">
-                        <li *ngFor="let name of _tenGiay">
-                          <a (click)="goCate(name)">{{name}}</a>
+                    <li class="">
+                      <ul class="sub-menu">
+                        <li (click)="goCate(name)" class="select" *ngFor="let name of _tenGiay">
+                            <a class="btnSelect">{{name}}</a>
                         </li>
                       </ul>
                     </li>
                   </ul>
+
                 </div>
               </div>
             </div>
@@ -71,9 +64,5 @@
           </div>
         </div>
 
-<!-- 
-      </div>
-
-    </div> -->
   </div>
 </div>
