update insert new hoadon

--- a/karl-shop/src/app/components/checkout/checkout.component.html
+++ b/karl-shop/src/app/components/checkout/checkout.component.html
@@ -56,6 +56,9 @@
               <div class="btnSubmit">
                 <button [disabled]="checkoutForm.invalid" type="submit" class="btn btn-success btnCheckout">Xác nhận thanh toán</button>
               </div>
+              <div class="btnSubmit">
+                <button class="btn btn-success btnCheckout" (click)="saveHoaDon()">Xác nhận thanh toán</button>
+              </div>
 
             </div>
           </form>
